--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,10 @@ body {
 }
 
 .bg-profile {
-	background-color: #c7a693;
+	background-color: #0033cc;
 }
 .cover-profile {
-	color: #856046;
+	color: #ffcc00;
 }
 .cover-profile img.cover-image{
 	z-index: 0;
@@ -53,7 +53,7 @@ body {
 }
 .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover{
 	color: #fff;
-	background-color: #5e0231;
+	background-color: #cc0066;
 }
 .bg-contact {
 	background-image: url("../images/background.png");
